deploy/k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: pch
  labels:
    app.kubernetes.io/part-of: pch-msa
    kubernetes.io/metadata.name: pch
